<resources>
    <string name="lang_english">English</string>
    <string name="lang_zulu">Zulu</string>
    <string name="lang_afrikaans">Afrikaans</string>
    <string name="lang_shona">Shona</string>
    <string name="lang_chinese">Chinese</string>
    <string name="settings_title">Settings</string>
    <string name="notifications_label">Notifications</string>
    <string name="click_noise_label">Click Noise</string>
    <string name="share_location_label">Share Location</string>
    <string name="sync_database_label">Sync Database</string>
    <string name="view_privacy_policy_label">View Privacy Policy</string>
    <string name="save_button">Save!</string>
    <string name="language_changed">Language changed successfully</string>
    <string name="app_name">LetsLink</string>
    <string name="title_activity_event_voting">EventVoting</string>
    <string name="title_activity_event_voting_page">EventVotingPage</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="create_event">Create Event</string>
    <string name="back">Back</string>
    <string name="event_title">Event Title</string>
    <string name="enter_event_title">Enter Event Title</string>
    <string name="example_braai">E.g., Braai</string>
    <string name="event_description">Event Description</string>
    <string name="describe_your_description">Describe your description</string>
    <string name="example_fun_time">E.g Fun time in the backyard with friends</string>
    <string name="location">Location</string>
    <string name="enter_location">Enter Location</string>
    <string name="example_zacks_house">E.g Zacks House</string>
    <string name="start_time">Start Time</string>
    <string name="enter_time">Enter Time</string>
    <string name="enter_start_time_of_event">Enter Start Time of event</string>
    <string name="end_time">End Time</string>
    <string name="enter_end_time_of_event">Enter End Time of event</string>
    <string name="select_date">Select Date</string>
    <string name="select_groups">Select Groups</string>
    <string name="alp_login">Login</string>
    <string name="alp_email">Email</string>
    <string name="alp_password">Password</string>
    <string name="alp_remember_me">Remember me</string>
    <string name="alp_forgot_password">Forgot password?</string>
    <string name="alp_sign_in">Sign in</string>
    <string name="alp_login_via_biometrics">Login via biomterics</string>
    <string name="alp_dont_have_an_account">Don\'t have an account?</string>
    <string name="alp_sign_up">Sign up</string>
    <string name="il_groups_chat">Groups Chat</string>
    <string name="il_group_placeholder">group placeholder.</string>
    <string name="il_invite_link">http://10.0.2.2:3000/invite/a923-34...</string>
    <string name="il_join">join</string>
    <string name="it_task_placeholder">Task placeholder</string>
    <string name="it_mark_as_done">Mark as done</string>
    <string name="am_welcome">Welcome to LetsLink</string>
    <string name="ff_hello_first_fragment">Hello first fragment</string>
    <string name="ff_next">Next</string>
    <string name="fe_no_events">No Events</string>
    <string name="fe_create_event">Create Event</string>
    <string name="fg_no_groups">No Groups</string>
    <string name="fg_create_group">Create Group</string>
    <string name="fs_hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fs_previous">Previous</string>
    <string name="igc_group_name">Group Name</string>
    <string name="igc_group_description">Group Description</string>
    <string name="ac_compass">Compass</string>
    <string name="fa_account">Account</string>
    <string name="fa_my_account">My Account</string>
    <string name="fa_account_info">Account Info</string>
    <string name="fa_to_do">To-Do</string>
    <string name="fa_settings">Settings</string>
    <string name="fa_user_safety">User Safety</string>
    <string name="fa_logout">Logout</string>
    <string name="ict_task_name">Task Name</string>
    <string name="ict_assigned_to">Assigned to: User</string>
    <string name="ict_completed">Completed</string>
    <string name="iec_event_title">Event Title</string>
    <string name="iec_event_time">Event Time</string>
    <string name="iec_event_location">Event Location</string>
    <string name="chp_hello_blank_fragment">Hello blank fragment</string>
    <string name="fs_settings">Settings</string>
    <string name="fs_edit_profile">Edit Profile</string>
    <string name="fs_notifications">Notifications</string>
    <string name="fs_privacy">Privacy</string>
    <string name="fs_security">Security</string>
    <string name="fs_help_and_support">Help &amp; Support</string>
    <string name="fs_about">About</string>
    <string name="ims_message">Message</string>
    <string name="ims_timestamp">12:00 PM</string>
    <string name="ahp_home">Home</string>
    <string name="atm_main_menu">Main Menu</string>
    <string name="atm_login">Login</string>
    <string name="atm_register">Register</string>
    <string name="atm_home">Home</string>
    <string name="atm_to_do">To-Do</string>
    <string name="atm_account">Account</string>
    <string name="atm_settings">Settings</string>
    <string name="atm_create_event">Create Event</string>
    <string name="atm_create_task">Create Task</string>
    <string name="atm_user_safety">User Safety</string>
    <string name="atm_events_page">Events Page</string>
    <string name="atm_groups_page">Groups Page</string>
    <string name="ivr_option">Option</string>
    <string name="ivr_votes">0 Votes</string>
    <string name="atdp_my_tasks">My Tasks</string>
    <string name="ffm_friend_map">Friend Map</string>
    <string name="age_group_event">Group Event</string>
    <string name="age_event_name">Event Name</string>
    <string name="age_create_event">Create Event</string>
    <string name="age_add_task">Add Task</string>
    <string name="aus_user_safety">User Safety</string>
    <string name="aus_safety_tips">Safety Tips</string>
    <string name="aus_report_user">Report a User</string>
    <string name="aus_block_user">Block a User</string>
    <string name="aus_emergency_contacts">Emergency Contacts</string>
    <string name="aus_share_live_location">Share Live Location</string>
    <string name="fcg_create_group">Create Group</string>
    <string name="fcg_group_name">Group Name</string>
    <string name="fcg_group_description">Group Description</string>
    <string name="fcg_create">Create</string>
    <string name="imr_message">Message</string>
    <string name="imr_timestamp">12:00 PM</string>
    <string name="imr_sender_name">Sender Name</string>
    <string name="aga_group_name">Group Name</string>
    <string name="agd_group_details">Group Details</string>
    <string name="agd_group_name">Group Name</string>
    <string name="agd_members">Members</string>
    <string name="agd_add_member">Add Member</string>
    <string name="agd_leave_group">Leave Group</string>
    <string name="arp_register">Register</string>
    <string name="arp_first_name">First Name</string>
    <string name="arp_last_name">Last Name</string>
    <string name="arp_email">Email</string>
    <string name="arp_password">Password</string>
    <string name="arp_confirm_password">Confirm Password</string>
    <string name="arp_register_button">Register</string>
    <string name="arp_already_have_account">Already have an account?</string>
    <string name="arp_sign_in">Sign in</string>
    <string name="fed_event_details">Event Details</string>
    <string name="fed_event_name">Event Name</string>
    <string name="fed_time">Time:</string>
    <string name="fed_location">Location:</string>
    <string name="fed_description">Description:</string>
    <string name="fed_going">Going</string>
    <string name="fed_not_going">Not Going</string>
    <string name="fed_maybe">Maybe</string>
    <string name="fgd_group_details">Group Details</string>
    <string name="fgd_group_name">Group Name</string>
    <string name="fgd_members">Members</string>
    <string name="fgd_add_member">Add Member</string>
    <string name="fgd_leave_group">Leave Group</string>
    <string name="fgd_no_members">No members yet.</string>
    <string name="arl_received_links">Received Links</string>
    <string name="fgcui_type_message">Type a message...</string>
    <string name="ite_event_name">Event Name</string>
    <string name="ite_venue_name">Venue Name</string>
    <string name="ite_event_date">Event Date</string>
    <string name="ite_view_on_ticketmaster">View on Ticketmaster</string>
    <string name="actp_create_task">Create Task</string>
    <string name="actp_task_title">Task Title</string>
    <string name="actp_task_description">Task Description</string>
    <string name="actp_assign_to">Assign To</string>
    <string name="actp_due_date">Due Date</string>
    <string name="actp_create_task_button">Create Task</string>
    <string name="appp_privacy_policy">Privacy Policy</string>
    <string name="arpp_reset_password">Reset Password</string>
    <string name="arpp_new_password">New Password</string>
    <string name="arpp_confirm_new_password">Confirm New Password</string>
    <string name="arpp_reset_button">Reset</string>
    <string name="afpp_forgot_password">Forgot Password</string>
    <string name="afpp_email">Email</string>
    <string name="afpp_send_reset_link">Send Reset Link</string>
    <string name="ahc_home">Home</string>
    <string name="ahc_events">Events</string>
    <string name="ahc_groups">Groups</string>
    <string name="ahc_friends">Friends</string>
    <string name="ahc_account">Account</string>
    <string name="lp9_authentication_error">Authentication error: %1$s</string>
    <string name="lp9_user_chose_password_login">User chose password login</string>
    <string name="lp9_authentication_succeeded">Authentication succeeded</string>
    <string name="lp9_authentication_failed">Authentication failed</string>
    <string name="lp9_biometric_login_title">Biometric Login</string>
    <string name="lp9_biometric_login_subtitle">Log in using your fingerprint or face</string>
    <string name="lp9_use_password">Use Password</string>
    <string name="lp9_biometric_auth_not_available">Biometric authentication not available</string>
    <string name="lp9_welcome_back">Welcome back, %1$s!</string>
    <string name="lp9_user_account_not_found">User account not found</string>
    <string name="lp9_no_saved_login">No saved login found</string>
    <string name="lp9_user_not_found_incorrect_credentials">User not found: Incorrect credentials</string>
    <string name="lp9_google_sign_in_failed">Google sign in failed</string>
    <string name="lvm9_email_is_required">Email is required</string>
    <string name="connect_with_your_communities">Connect with your communities</string>
    <string name="my_groups">My Groups</string>
    <string name="send_invite">Send Invite</string>
    <string name="enter_link">Enter link</string>
    <string name="view_invites">View Invites</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="event_name">Event Name:</string>
    <string name="event_description1">Event description:</string>
    <string name="event_location">Event Location:</string>
    <string name="event_time">Event Time:</string>
    <string name="upload_image">Upload Image</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="e_g_squad_goals">E.g., Squad Goals</string>
    <string name="describe_your_group">Describe your group</string>
    <string name="e_g_for_planning_weekend_hikes_and_trips">E.g., For planning weekend hikes and trips.</string>
    <string name="invite_members">Invite Members</string>
</resources>