<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".activities.GroupEventActivity">


    <LinearLayout
        android:padding="8dp"
        android:id="@+id/header"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="Event"
            android:textAlignment="center"
            android:textSize="33sp"
            android:textColor="@color/orange"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/eventDetails"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_card_background_orange">

        <TextView
            android:id="@+id/eventName"
            android:text="@string/event_name"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/eventDescription"
            android:text="@string/event_description1"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/eventLocation"
            android:text="@string/event_location"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/eventTime"
            android:text="@string/event_time"
            android:textSize="19sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:padding="12dp"
        tools:listitem="@layout/item_collab_task"
        android:id="@+id/tasksRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>